--- a/scss/main.scss
+++ b/scss/main.scss
@@ -302,7 +302,7 @@ input[type="checkbox"]{
         &.check{
             &::before{
                 background-color: $color-primary;
-                content: '✓';
+                content: '∨';
                 display: flex;
                 color: $color-secondary;
                 justify-content: center;
