--- a/scss/main.css
+++ b/scss/main.css
@@ -221,12 +221,14 @@ input[type=checkbox]:checked::after {
 }
 .stepper .stepper-item.check::before {
   background-color: #EAF0ED;
-  content: "✓";
+  font-family: "Material Symbols Outlined";
+  content: "\e5ca";
   display: flex;
   color: #3F5D45;
   justify-content: center;
   align-items: center;
   font-weight: 600;
+  border: 0cap;
 }
 .stepper .stepper-item.last {
   justify-content: end;
@@ -279,7 +281,8 @@ input[type=checkbox]:checked::after {
 }
 .stepper-dark .stepper-dark-item.check::before {
   background-color: #3F5D45;
-  content: "✓";
+  font-family: "Material Symbols Outlined";
+  content: "\e5ca";
   display: flex;
   color: #EAF0ED;
   justify-content: center;
