--- a/scss/main.scss
+++ b/scss/main.scss
@@ -228,12 +228,14 @@ input[type="checkbox"]{
         &.check{
             &::before{
                 background-color: $color-secondary;
-                content: '✓';
+                font-family: 'Material Symbols Outlined';
+                content: '\e5ca';
                 display: flex;
                 color: $color-primary;
                 justify-content: center;
                 align-items: center;
                 font-weight: 600;
+                border: 0cap;
             };
 
         }
@@ -302,7 +304,8 @@ input[type="checkbox"]{
         &.check{
             &::before{
                 background-color: $color-primary;
-                content: '∨';
+                font-family: 'Material Symbols Outlined';
+                content: '\e5ca';
                 display: flex;
                 color: $color-secondary;
                 justify-content: center;
