feat:optimize hover

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,7 @@ $color-background:#FFFFFF;
 
 
 //字體
-$font-family-primary:'PingFang TC', Semibold;
+$font-family-primary:'PingFang TC','Noto Sans TC',sans-serif;
 $font-family-secondary:'Helvetica Neue';
 
 
