--- a/scss/main.scss
+++ b/scss/main.scss
@@ -230,6 +230,7 @@ input[type="checkbox"]{
                 font-family: 'Material Symbols Outlined';
                 content: '\e5ca';
                 font-size: 14px;
+                max-height: 16.45px;
                 display: flex;
                 color: $color-primary;
                 justify-content: center;
@@ -306,6 +307,9 @@ input[type="checkbox"]{
                 background-color: $color-primary;
                 font-family: 'Material Symbols Outlined';
                 content: '\e5ca';
+                max-height: 20px;
+                max-width: 20px;
+                font-size: 14px;
                 display: flex;
                 color: $color-secondary;
                 justify-content: center;
