--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-amber-500: oklch(76.9% 0.188 70.08);
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -178,6 +179,9 @@
   .relative {
     position: relative;
   }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
   .top-4 {
     top: calc(var(--spacing) * 4);
   }
@@ -199,6 +203,12 @@
   .right-10 {
     right: calc(var(--spacing) * 10);
   }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
   .left-5 {
     left: calc(var(--spacing) * 5);
   }
@@ -213,6 +223,9 @@
   }
   .z-10 {
     z-index: 10;
+  }
+  .mx-0 {
+    margin-inline: calc(var(--spacing) * 0);
   }
   .mx-auto {
     margin-inline: auto;
@@ -319,9 +332,6 @@
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
-  .h-\[17\.4px\] {
-    height: 17.4px;
-  }
   .h-\[17\.74px\] {
     height: 17.74px;
   }
@@ -361,9 +371,6 @@
   .h-\[128px\] {
     height: 128px;
   }
-  .h-\[130px\] {
-    height: 130px;
-  }
   .h-\[200px\] {
     height: 200px;
   }
@@ -402,6 +409,9 @@
   }
   .h-full {
     height: 100%;
+  }
+  .h-screen {
+    height: 100vh;
   }
   .max-h-\[250px\] {
     max-height: 250px;
@@ -478,11 +488,11 @@
   .w-\[89px\] {
     width: 89px;
   }
+  .w-\[100px\] {
+    width: 100px;
+  }
   .w-\[108px\] {
     width: 108px;
-  }
-  .w-\[114\.14px\] {
-    width: 114.14px;
   }
   .w-\[171px\] {
     width: 171px;
@@ -535,11 +545,11 @@
   .w-\[780px\] {
     width: 780px;
   }
-  .w-fit {
-    width: fit-content;
-  }
   .w-full {
     width: 100%;
+  }
+  .w-screen {
+    width: 100vw;
   }
   .max-w-\[89px\] {
     max-width: 89px;
@@ -574,6 +584,9 @@
   .max-w-\[1024px\] {
     max-width: 1024px;
   }
+  .max-w-screen {
+    max-width: 100vw;
+  }
   .min-w-\[153px\] {
     min-width: 153px;
   }
@@ -603,12 +616,6 @@
   }
   .border-collapse {
     border-collapse: collapse;
-  }
-  .scale-150 {
-    --tw-scale-x: 150%;
-    --tw-scale-y: 150%;
-    --tw-scale-z: 150%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
@@ -658,6 +665,9 @@
   .justify-end {
     justify-content: flex-end;
   }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
@@ -704,6 +714,10 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
+  .border-b-2 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 2px;
+  }
   .border-\[\#3F5D45\] {
     border-color: #3F5D45;
   }
@@ -721,6 +735,9 @@
   }
   .bg-\[\#FFFFFF\] {
     background-color: #FFFFFF;
+  }
+  .bg-amber-300 {
+    background-color: var(--color-amber-300);
   }
   .bg-white {
     background-color: var(--color-white);
@@ -754,6 +771,9 @@
   }
   .py-\[30px\] {
     padding-block: 30px;
+  }
+  .py-\[33px\] {
+    padding-block: 33px;
   }
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
@@ -790,9 +810,21 @@
   .text-\[20px\] {
     font-size: 20px;
   }
+  .leading-2 {
+    --tw-leading: calc(var(--spacing) * 2);
+    line-height: calc(var(--spacing) * 2);
+  }
   .leading-8 {
     --tw-leading: calc(var(--spacing) * 8);
     line-height: calc(var(--spacing) * 8);
+  }
+  .leading-10 {
+    --tw-leading: calc(var(--spacing) * 10);
+    line-height: calc(var(--spacing) * 10);
+  }
+  .leading-20 {
+    --tw-leading: calc(var(--spacing) * 20);
+    line-height: calc(var(--spacing) * 20);
   }
   .font-light {
     --tw-font-weight: var(--font-weight-light);
@@ -833,11 +865,6 @@
   .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
   .\[scrollbar-width\:none\] {
     scrollbar-width: none;
@@ -919,9 +946,14 @@
       background-color: #FFE180;
     }
   }
-  .active\:fill-amber-500 {
+  .active\:bg-\[\#e4bd3d\] {
     &:active {
-      fill: var(--color-amber-500);
+      background-color: #e4bd3d;
+    }
+  }
+  .active\:bg-\[\#fac517\] {
+    &:active {
+      background-color: #fac517;
     }
   }
   .active\:font-semibold {
@@ -933,6 +965,11 @@
   .active\:text-\[\#3F5D45\] {
     &:active {
       color: #3F5D45;
+    }
+  }
+  .disabled\:bg-white {
+    &:disabled {
+      background-color: var(--color-white);
     }
   }
   .max-\[769px\]\:top-\[30px\] {
@@ -1075,24 +1112,9 @@
       aspect-ratio: 1 / 1;
     }
   }
-  .md\:h-5 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 5);
-    }
-  }
   .md\:h-10 {
     @media (width >= 48rem) {
       height: calc(var(--spacing) * 10);
-    }
-  }
-  .md\:h-12 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 12);
-    }
-  }
-  .md\:h-\[17\.4px\] {
-    @media (width >= 48rem) {
-      height: 17.4px;
     }
   }
   .md\:h-\[48px\] {
@@ -1145,16 +1167,6 @@
       width: 620px;
     }
   }
-  .md\:max-w-\[144px\] {
-    @media (width >= 48rem) {
-      max-width: 144px;
-    }
-  }
-  .md\:max-w-\[940px\] {
-    @media (width >= 48rem) {
-      max-width: 940px;
-    }
-  }
   .md\:min-w-\[390px\] {
     @media (width >= 48rem) {
       min-width: 390px;
@@ -1201,12 +1213,6 @@
       border-width: 0px;
     }
   }
-  .md\:border-y {
-    @media (width >= 48rem) {
-      border-block-style: var(--tw-border-style);
-      border-block-width: 1px;
-    }
-  }
   .md\:border-b {
     @media (width >= 48rem) {
       border-bottom-style: var(--tw-border-style);
@@ -1248,21 +1254,6 @@
       padding-bottom: calc(var(--spacing) * 5);
     }
   }
-}
-@property --tw-scale-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-z {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
 }
 @property --tw-rotate-x {
   syntax: "*";
@@ -1347,12 +1338,24 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-scale-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
-      --tw-scale-x: 1;
-      --tw-scale-y: 1;
-      --tw-scale-z: 1;
       --tw-rotate-x: initial;
       --tw-rotate-y: initial;
       --tw-rotate-z: initial;
@@ -1373,6 +1376,9 @@
       --tw-backdrop-opacity: initial;
       --tw-backdrop-saturate: initial;
       --tw-backdrop-sepia: initial;
+      --tw-scale-x: 1;
+      --tw-scale-y: 1;
+      --tw-scale-z: 1;
     }
   }
 }
