feat: fix cart item quantity btn & optimize footer

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,6 +9,6 @@ $color-background:#FFFFFF;
 
 //字體
 $font-family-primary:'PingFang TC','Noto Sans TC',sans-serif;
-$font-family-secondary:'Helvetica Neue';
+$font-family-secondary:'Helvetica Neue',sans-serif;
 
 
