--- a/scss/main.scss
+++ b/scss/main.scss
@@ -84,6 +84,13 @@ body{
     font-weight: 600;
     &:hover{
         border-bottom: 4px solid $color-primary;
+        transition: 0.5s;
+        transform: scale(1.5);
+    }
+    &:active{
+        border-bottom: 4px solid $color-primary;
+        transition: 0.5s;
+        transform: scale(1.5);
     }
 }
 
