--- a/scss/main.scss
+++ b/scss/main.scss
@@ -133,7 +133,7 @@ body{
         background-color:$color-secondary;
         transition: all 0.5s ease;
     }
-    &:active{
+    &.active{
         background-color:$color-secondary;
         transition: all 0.5s ease;
     }
