--- a/scss/main.scss
+++ b/scss/main.scss
@@ -153,7 +153,7 @@ body{
         background-color: $color-primary;
         color:$color-secondary;
     }
-    &:active{
+    &.active{
         background-color: $color-primary;
         color:$color-secondary;
     }
